tests/neg-custom-args/captures/unsound-reach.check
-- Error: tests/neg-custom-args/captures/unsound-reach.scala:9:18 ------------------------------------------------------
9 |class Bar extends Foo[File^]: // error
  |                  ^^^^^^^^^^
  |                  Type variable X of trait Foo cannot be instantiated to File^ since
  |                  that type captures the root capability `cap`.
  |
  |                  where:    ^ refers to the universal root capability
-- Error: tests/neg-custom-args/captures/unsound-reach.scala:14:19 -----------------------------------------------------
14 |class Bar2 extends Foo2[File^]: // error
   |                   ^
   |                   Type variable X of constructor Foo2 cannot be instantiated to File^ since
   |                   that type captures the root capability `cap`.
   |
   |                   where:    ^ refers to the universal root capability
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/unsound-reach.scala:18:31 --------------------------------
18 |    val backdoor: Foo[File^] = new Bar   // error (follow-on, since the parent Foo[File^] of bar is illegal).
   |                               ^^^^^^^
   |                               Found:    Bar
   |                               Required: Foo[File^]
   |
   |                               Note that capability cap is not included in capture set {cap²}
   |                               because cap is not visible from cap² in value backdoor.
   |
   |                               where:    ^    refers to a fresh root capability in the type of value backdoor
   |                                         cap  is the universal root capability
   |                                         cap² is a fresh root capability in the type of value backdoor
   |
   | longer explanation available when compiling with `-explain`
